--- a/src/components/edit-class/index.component.html
+++ b/src/components/edit-class/index.component.html
@@ -11,7 +11,7 @@
           $t('_categoryName')
         }}</nz-form-label>
         <nz-form-control [nzSpan]="18" [nzErrorTip]="$t('_requiredName')">
-          <input formControlName="title" nz-input maxlength="50" />
+          <input formControlName="title" nz-input maxlength="50" #input />
         </nz-form-control>
       </nz-form-item>
 
