--- a/src/view/system/tag/index.component.html
+++ b/src/view/system/tag/index.component.html
@@ -52,6 +52,8 @@
         />
       </td>
       <td>
+        <a (click)="moveUp(idx)">{{ $t('_moveUp') }}</a>
+        <a (click)="moveDown(idx)" class="mx-2.5">{{ $t('_moveDown') }}</a>
         <a
           *ngIf="!data.isInner"
           nz-popconfirm
