--- a/src/components/search/index.component.html
+++ b/src/components/search/index.component.html
@@ -22,6 +22,7 @@
         id="search-engine-input"
         (keyup)="onKey($event)"
         autocomplete="off"
+        #input
       />
     </nz-input-group>
     <ng-template #prefixIcon>
