--- a/src/view/system/web/index.component.html
+++ b/src/view/system/web/index.component.html
@@ -111,7 +111,7 @@
                 [nzPopconfirmTitle]="$t('_delWarn')"
                 nzPopconfirmPlacement="bottom"
                 (nzOnConfirm)="handleDeleteClass(data.id)"
-                class="color-red ml-2.5"
+                class="!text-red-500 ml-2.5"
               >
                 {{ $t('_del') }}
               </a>
@@ -210,7 +210,7 @@
                 [nzPopconfirmTitle]="$t('_delWarn')"
                 nzPopconfirmPlacement="bottom"
                 (nzOnConfirm)="handleDeleteClass(data.id)"
-                class="color-red ml-2.5"
+                class="!text-red-500 ml-2.5"
               >
                 {{ $t('_del') }}
               </a>
@@ -324,7 +324,7 @@
                 [nzPopconfirmTitle]="$t('_delWarn')"
                 nzPopconfirmPlacement="bottom"
                 (nzOnConfirm)="handleDeleteClass(data.id)"
-                class="color-red ml-2.5"
+                class="!text-red-500 ml-2.5"
               >
                 {{ $t('_del') }}
               </a>
@@ -452,7 +452,7 @@
                 [nzPopconfirmTitle]="$t('_confirmDel')"
                 nzPopconfirmPlacement="bottom"
                 (nzOnConfirm)="handleDeleteWeb(data)"
-                class="color-red"
+                class="!text-red-500"
               >
                 {{ $t('_del') }}
               </a>
