--- a/src/components/toolbar-title/index.component.html
+++ b/src/components/toolbar-title/index.component.html
@@ -2,14 +2,17 @@
   class="title tool-title dark-primary dark-border-color"
   *ngIf="dataSource && dataSource.title"
 >
-  <span class="cursor-pointer" (click)="onCollapse.emit()">
+  <div
+    class="cursor-pointer whitespace-nowrap ellipsis pr-4"
+    (click)="onCollapse.emit()"
+  >
     <i
       class="iconfont iconjiantouarrow483 down-arrow"
       [class.active]="dataSource.collapsed"
     >
     </i>
 
-    <span style="margin-left: 10px; align-self: center; vertical-align: middle">
+    <span class="ml-1 self-center align-middle">
       {{ dataSource.title }} x {{ dataSource.nav.length }}
     </span>
     <i
@@ -39,7 +42,7 @@
       (nzOnConfirm)="handleDelete(dataSource.id)"
       (click)="stopPropagation($event)"
     ></i>
-  </span>
+  </div>
 
   <i
     *ngIf="isLogin || permissions.create"
