feat: Update logo component to ensure icon is always displayed, modify related components and interfaces

--- a/src/components/card/index.component.html
+++ b/src/components/card/index.component.html
@@ -45,7 +45,7 @@
         class="cursor-pointer"
       >
         <div class="top">
-          <app-logo [src]="dataSource.icon || ''" [name]="dataSource.name" />
+          <app-logo [src]="dataSource.icon" [name]="dataSource.name" />
           <div
             class="title ellipsis2 dark-white"
             [innerHTML]="dataSource.name"
@@ -143,7 +143,7 @@
         >
       </div>
       <div class="wrapper ellipsis">
-        <app-logo [src]="dataSource.icon || ''" [name]="dataSource.name" />
+        <app-logo [src]="dataSource.icon" [name]="dataSource.name" />
         <div
           class="right-box ellipsis"
           [title]="dataSource.__desc__ || dataSource.desc"
@@ -188,7 +188,7 @@
       </div>
       <div class="wrapper ellipsis">
         <app-logo
-          [src]="dataSource.icon || ''"
+          [src]="dataSource.icon"
           [name]="dataSource.name"
           [size]="30"
         />
@@ -221,7 +221,7 @@
             "
           >
             <app-logo
-              [src]="dataSource.icon || ''"
+              [src]="dataSource.icon"
               [name]="dataSource.name"
               [size]="30"
             />
@@ -287,7 +287,7 @@
       >
         <div class="title-bar">
           <app-logo
-            [src]="dataSource.icon || ''"
+            [src]="dataSource.icon"
             [name]="dataSource.name"
             [size]="30"
           />
