--- a/src/view/system/web/index.component.html
+++ b/src/view/system/web/index.component.html
@@ -84,7 +84,7 @@
               (nzCheckedChange)="onItemChecked(data.id, $event)"
             ></td>
             <td>
-              <app-logo [src]="data.icon || ''" [name]="data.title" />
+              <app-logo [src]="data.icon" [name]="data.title" />
             </td>
             <td>{{ data.title }}</td>
             <td>
@@ -168,7 +168,7 @@
               (nzCheckedChange)="onItemChecked(data.id, $event)"
             ></td>
             <td>
-              <app-logo [src]="data.icon || ''" [name]="data.title" />
+              <app-logo [src]="data.icon" [name]="data.title" />
             </td>
             <td>{{ data.title }}</td>
             <td>
@@ -270,7 +270,7 @@
               (nzCheckedChange)="onItemChecked(data.id, $event)"
             ></td>
             <td>
-              <app-logo [src]="data.icon || ''" [name]="data.title" />
+              <app-logo [src]="data.icon" [name]="data.title" />
             </td>
             <td>{{ data.title }}</td>
             <td>
