--- a/src/components/search/index.component.html
+++ b/src/components/search/index.component.html
@@ -42,7 +42,7 @@
             *ngFor="let item of searchEngineList; let i = index"
             (click)="clickEngineItem(i)"
           >
-            <app-logo [src]="item.icon || ''" [size]="20" [check]="false" />
+            <app-logo [src]="item.icon" [size]="20" [check]="false" />
             <span class="name2 dark-text ellipsis">{{ item.name }}</span>
           </div>
         </div>
