feat: Enhance CreateWebComponent with URL validation and improve notification display; refactor Holiday and OffWork components to remove unnecessary ngOnInit

--- a/src/view/system/search/index.component.html
+++ b/src/view/system/search/index.component.html
@@ -19,9 +19,7 @@
 <div class="mb-2" *ngIf="!isSelfDevelop">
   <b>{{ $t('_buildTip') }}</b>
 </div>
-<div class="mb-2" *ngIf="isSelfDevelop">
-  e.g. https://example.com/search?q=$&#123;q&#125;
-</div>
+<div class="mb-2">e.g. https://example.com/search?q=$&#123;q&#125;</div>
 <nz-table #basicTable [nzData]="searchList">
   <thead>
     <tr>
