feat: Delete. navauth file, optimize Vercel configuration, refactor related components and utility functions

--- a/src/components/card/index.component.html
+++ b/src/components/card/index.component.html
@@ -256,6 +256,14 @@
       </div>
     </div>
 
+    <!-- poster style -->
+    <div
+      class="card-container column2 ellipsis dark-bg dark-white dark-border-color dark-shadow dark-hover"
+      *ngSwitchCase="'poster'"
+    >
+      <div></div>
+    </div>
+
     <!-- column style -->
     <div
       class="card-container column2 ellipsis dark-bg dark-white dark-border-color dark-shadow dark-hover"
