--- a/src/view/system/setting/index.component.html
+++ b/src/view/system/setting/index.component.html
@@ -365,7 +365,7 @@
         <nz-form-control [nzSpan]="10">
           <nz-radio-group formControlName="lightCardStyle">
             <label nz-radio nzValue="standard">{{ $t('_standard') }}</label>
-            <!-- <label nz-radio nzValue="poster">{{ $t('_poster') }}</label> -->
+            <label nz-radio nzValue="poster">{{ $t('_poster') }}</label>
             <label nz-radio nzValue="column">{{ $t('_column') }}</label>
             <label nz-radio nzValue="example">{{ $t('_simplicity') }}</label>
             <label nz-radio nzValue="retro">{{ $t('_retro') }}</label>
@@ -500,6 +500,7 @@
         <nz-form-control [nzSpan]="10">
           <nz-radio-group formControlName="superCardStyle">
             <label nz-radio nzValue="standard">{{ $t('_standard') }}</label>
+            <label nz-radio nzValue="poster">{{ $t('_poster') }}</label>
             <label nz-radio nzValue="column">{{ $t('_column') }}</label>
             <label nz-radio nzValue="example">{{ $t('_simplicity') }}</label>
             <label nz-radio nzValue="retro">{{ $t('_retro') }}</label>
@@ -628,6 +629,7 @@
         <nz-form-control [nzSpan]="10">
           <nz-radio-group formControlName="simCardStyle">
             <label nz-radio nzValue="standard">{{ $t('_standard') }}</label>
+            <label nz-radio nzValue="poster">{{ $t('_poster') }}</label>
             <label nz-radio nzValue="column">{{ $t('_column') }}</label>
             <label nz-radio nzValue="example">{{ $t('_simplicity') }}</label>
             <label nz-radio nzValue="retro">{{ $t('_retro') }}</label>
@@ -787,6 +789,7 @@
         <nz-form-control [nzSpan]="10">
           <nz-radio-group formControlName="sideCardStyle">
             <label nz-radio nzValue="standard">{{ $t('_standard') }}</label>
+            <label nz-radio nzValue="poster">{{ $t('_poster') }}</label>
             <label nz-radio nzValue="column">{{ $t('_column') }}</label>
             <label nz-radio nzValue="example">{{ $t('_simplicity') }}</label>
             <label nz-radio nzValue="retro">{{ $t('_retro') }}</label>
@@ -985,6 +988,7 @@
         <nz-form-control [nzSpan]="10">
           <nz-radio-group formControlName="appCardStyle">
             <label nz-radio nzValue="standard">{{ $t('_standard') }}</label>
+            <label nz-radio nzValue="poster">{{ $t('_poster') }}</label>
             <label nz-radio nzValue="column">{{ $t('_column') }}</label>
             <label nz-radio nzValue="example">{{ $t('_simplicity') }}</label>
             <label nz-radio nzValue="retro">{{ $t('_retro') }}</label>
