fix: Fix the top display of website creation

--- a/src/components/create-web/index.component.html
+++ b/src/components/create-web/index.component.html
@@ -79,7 +79,8 @@
 
           <nz-checkbox-group
             *ngIf="isTop"
-            formControlName="topOptions"
+            [nzOptions]="topOptions"
+            formControlName="topTypes"
           ></nz-checkbox-group>
         </nz-form-control>
       </nz-form-item>
