feat: Add classification tab for quick positioning

--- a/src/components/toolbar-title/index.component.html
+++ b/src/components/toolbar-title/index.component.html
@@ -1,4 +1,5 @@
 <div
+  [id]="'t' + dataSource.id"
   class="title tool-title dark-primary dark-border-color"
   *ngIf="dataSource && dataSource.title"
 >
