--- a/src/components/card/index.component.scss
+++ b/src/components/card/index.component.scss
@@ -180,6 +180,7 @@
   .title {
     width: 100%;
     font-weight: 500;
+    font-size: 16px;
   }
   .wrapper {
     display: flex;
@@ -191,7 +192,7 @@
     flex-direction: column;
     flex: 1;
     width: 0;
-    margin-left: 12px;
+    margin-left: 8px;
   }
 }
 
