--- a/src/view/system/component/index.component.html
+++ b/src/view/system/component/index.component.html
@@ -3,7 +3,7 @@
   nzType="primary"
   (click)="handleSubmit()"
   [nzLoading]="submitting"
-  class="mb-4"
+  style="margin: 10px 0"
 >
   {{ $t('_save') }}
 </button>
