--- a/src/view/system/tag/index.component.html
+++ b/src/view/system/tag/index.component.html
@@ -23,19 +23,19 @@
 <nz-table #basicTable [nzData]="tagList">
   <thead>
     <tr>
-      <th>{{ $t('_tagName') }}</th>
-      <th>{{ $t('_color') }}</th>
-      <th>{{ $t('_sort') }}</th>
-      <th>{{ $t('_remark') }}</th>
-      <th>{{ $t('_action') }}</th>
+      <th nzWidth="150px">{{ $t('_tagName') }}</th>
+      <th nzWidth="160px">{{ $t('_color') }}</th>
+      <th nzWidth="150px">{{ $t('_sort') }}</th>
+      <th nzWidth="200px">{{ $t('_remark') }}</th>
+      <th nzWidth="200px">{{ $t('_action') }}</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let data of tagList; index as idx; trackBy: trackByItem">
-      <td width="150px">
+      <td>
         <input nz-input [(ngModel)]="data.name" maxlength="10" />
       </td>
-      <td width="160px">
+      <td>
         <input
           type="color"
           [value]="data.color"
@@ -43,10 +43,10 @@
         />
         - {{ data.color }}
       </td>
-      <td width="150px">
+      <td>
         <input nz-input [(ngModel)]="data.sort" maxlength="10" />
       </td>
-      <td width="200px">
+      <td>
         <div *ngIf="data.isInner">{{ data.desc }}</div>
         <input
           *ngIf="!data.isInner"
