--- a/src/components/component-group/index.component.html
+++ b/src/components/component-group/index.component.html
@@ -2,8 +2,14 @@
   class="component-group dark-scrollbar justify-center md:justify-start"
   *ngIf="components.length > 0"
   [class.directionCol]="direction === 'column'"
+  [class.over]="isOver"
+  [class.showAll]="isShowAll"
+  [class.!overflow-x-scroll]="isMobile"
 >
-  <ng-container *ngFor="let item of components; trackBy: trackByItem">
+  <span *ngIf="isOver" class="arrow" (click)="handleExpand()"
+    ><nz-icon nzType="double-right" nzTheme="outline" class="arrowicon"
+  /></span>
+  <ng-container *ngFor="let item of componentList; trackBy: trackByItem">
     <ng-container [ngSwitch]="item.type">
       <app-calendar *ngSwitchCase="ComponentType.Calendar" [data]="item" />
       <app-runtime *ngSwitchCase="ComponentType.Runtime" [data]="item" />
